# barefootjs

./: .gitattributes  .gitignore  .vale.ini  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.jsonc  docker-compose.yml  mise.toml  package.json
.changeset/: adapter-blade-initial.md  adapter-discovery-papercuts.md  adapter-gate-callback-body-fidelity.md  adapter-hono-deno-check.md  adapter-jinja-initial.md  adapter-override-renderasync.md  adapter-php-initial.md  adapter-rust-initial.md  adapter-twig-initial.md  adapter-twig-php-runtime-extraction.md  applyrestattrs-exclude-consumed-props.md  array-method-arity-guard.md  array-method-floor.md  arrow-const-setter-resolution.md  async-boundary-error-fallback.md  async-region-import-scoped.md  augment-prop-reads-all-carriers.md  auto-defer-brand-bindings.md  barefoot-router-prototype.md  bf-add-kick-css-watcher.md  bf-compat-matrix.md  bf-debug-profile-sr5.md  bf026-list-callback-block-body.md  bfimportmap-externals.md  block-expr-normalization.md  bundle-entries-implicit-client-external.md  carousel-go-ssr.md  carousel-perl-ssr.md  chart-nullish-object-fallback.md  child-primitive-props.md  children-bf-p-fix.md  classify-dom-prop-followup.md  classify-dom-prop.md  cli-bundle-dynamic-require.md  cli-runtime-tree-shaking.md  client-attr-defer.md  client-dangerously-set-inner-html.md  (+377 more)
integrations/axum/: Cargo.toml  Dockerfile  Dockerfile.dev  barefoot.config.ts  container.ts  package.json  playwright.config.ts  tsconfig.json  wrangler.toml
integrations/axum/client/: router-entry.ts
integrations/axum/e2e/: ai-chat.spec.ts  blog-ssr.spec.ts  blog.spec.ts  conditional-return.spec.ts  counter.spec.ts  form.spec.ts  portal.spec.ts  reactive-props.spec.ts  todo-app-ssr.spec.ts  todo-app.spec.ts  toggle.spec.ts
integrations/axum/scripts/: copy-shared.ts  gen-blog-data.ts
integrations/axum/src/: ai_chat.rs  blog.rs  main.rs  render.rs  session.rs  todo.rs
(+1278 files in other folders)
